# serializer version: 1
# name: TestEquiformerV2.test_ddp
  Size(
    1,
  )
# ---
# name: TestEquiformerV2.test_ddp.1
  Approx(
  	array([-0.00897979], dtype=float32), 
  	rtol=0.001, 
  	atol=0.001
  )
# ---
# name: TestEquiformerV2.test_ddp.2
  Size(
    34,
    3,
  )
# ---
# name: TestEquiformerV2.test_ddp.3
  Approx(
  	array([-0.00893646, -0.00290753, -0.02622171], dtype=float32), 
  	rtol=0.001, 
  	atol=0.001
  )
# ---
# name: TestEquiformerV2.test_energy_force_shape
  Size(
    1,
  )
# ---
# name: TestEquiformerV2.test_energy_force_shape.1
  Approx(
  	array([-0.00897979], dtype=float32), 
  	rtol=0.001, 
  	atol=0.001
  )
# ---
# name: TestEquiformerV2.test_energy_force_shape.2
  Size(
    34,
    3,
  )
# ---
# name: TestEquiformerV2.test_energy_force_shape.3
  Approx(
  	array([-0.00893646, -0.00290753, -0.02622171], dtype=float32), 
  	rtol=0.001, 
  	atol=0.001
  )
# ---
# name: TestEquiformerV2.test_gp
  Size(
    1,
  )
# ---
# name: TestEquiformerV2.test_gp.1
  Approx(
  	array([-0.02495255], dtype=float32), 
  	rtol=0.001, 
  	atol=0.001
  )
# ---
# name: TestEquiformerV2.test_gp.2
  Size(
    34,
    3,
  )
# ---
# name: TestEquiformerV2.test_gp.3
  Approx(
  	array([ 0.00203054, -0.00042871, -0.00279118], dtype=float32), 
  	rtol=0.001, 
  	atol=0.001
  )
# ---
